# aws-security-toolkit

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASE_NOTES_TEMPLATE.md  SECURITY.md  pyproject.toml
config-rules/: iam-mfa-enabled.json  s3-bucket-encryption.json
docs/: USAGE.md
policies/: assume-role-trust-policy.json  read-only-scan-policy.json
remediation/s3_block_public_access_lambda/: README.md  handler.py
scripts/: run_all.sh
src/awssec/: aws.py  check_cloudtrail_all_regions.py  check_iam_mfa.py  check_s3_public.py  check_sg_open_ports.py  cli.py  common.py  models.py  output.py
src/awssec/rules/: __init__.py  iam_root_mfa.py  s3_public.py
tests/: test_iam_root_mfa.py  test_s3_policy.py  test_s3_public.py
