
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "awssec"
version = "0.1.0"
description = "AWS security toolkit CLI with IAM, S3, CloudTrail, and SG checks"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Aleksandar Nenov"}]
dependencies = [
    "boto3>=1.35.0",
    "botocore>=1.35.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
    "black>=24.0.0"
]

[project.scripts]
awssec = "awssec.cli:main"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
